--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "notebooks/Generative-AI-for-Backend-Devs-Student-Guide.git"]
-	path = notebooks/Generative-AI-for-Backend-Devs-Student-Guide.git
+[submodule "notebooks/Generative-AI-for-Backend-Devs-Student-Guide"]
+	path = notebooks/Generative-AI-for-Backend-Devs-Student-Guide
 	url = git@github.com:Pythondeveloper6/Generative-AI-for-Backend-Devs-Student-Guide.git
